# photogen_api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: debug_ssh.yml  deploy.yml
migrations/models/: 0_20250417013731_init.py  0_20250417180522_init.py  1_20250417030100_update.py  1_20250417182443_update.py  2_20250416190201_None.py  2_20250417030439_update.py  2_20250420184817_update.py  3_20250417172254_update.py  4_20250417172544_update.py  5_20250417172943_update.py
src/photogen_api/: config.py  main.py  utils.py
src/photogen_api/auth/: dep.py  jwt.py
src/photogen_api/database/: db.py
src/photogen_api/database/models/: __init__.py  category.py  generation.py  style.py  user.py  user_job.py  user_profile.py
src/photogen_api/routes/: __init__.py  auth_router.py  category_router.py  generation_router.py  health_router.py  replicate_router.py  style_router.py  users_router.py
src/photogen_api/schemas/: auth.py  category.py  common.py  generation.py  profile.py  style.py  user.py
src/photogen_api/services/: auth_service.py  category_service.py  generation_service.py  replicate_service.py  style_service.py  user_service.py
tests/: auth_test.py  category_list_test.py  conftest.py  full_generate_test.py  generate_test.py  replicate_test.py  styles_list_test.py  user_profiles_test.py  users_update_gender_test.py  users_upload_profile_test.py
